[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.1",
    "fastapi>=0.120.0",
    "fuzzywuzzy>=0.18.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "python-socketio>=5.14.2",
    "requests>=2.32.5",
    "spotipy>=2.25.1",
    "uvicorn[standard]>=0.38.0",
    "yt-dlp>=2025.10.22",
]
